--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind utilities;
 
 
+html, body,:root{
+  height: 100%;
+}
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
